--- a/backend/config/routes.yaml
+++ b/backend/config/routes.yaml
@@ -2,3 +2,9 @@
 user_list:
     path: /users
     controller: App\Controller\UserController::listUsers
+    methods: [GET]
+
+user_preflight:
+    path: /users
+    controller: App\Controller\UserController::preflight
+    methods: [OPTIONS]
